--- a/index.html
+++ b/index.html
@@ -4,15 +4,18 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Pop Smoke</title>
-  <link rel="stylesheet" href="style.css">
+  <!-- stylesheet -->
+  <link rel="stylesheet" href="./assets/css/style.css">
 </head>
 <body>
   <body>
+    <!-- header -->
     <div id="main">
-      <img src="./img/POP OFFICIAL LOGO (WHITE).png" alt="">
+      <img src="./assets/img/POP OFFICIAL LOGO (WHITE).png" alt="">
     </div>
+    <!-- main -->
       <div id="img-div">
-        <img src="./img/POP_SMOKE_PHOTO_2_Credit-Jauris-Bardoux.jpg" alt="Pop Smoke">
+        <img src="./assets/img/POP_SMOKE_PHOTO_2_Credit-Jauris-Bardoux.jpg" alt="Pop Smoke">
         <div class="img-caption"></div>
         <p>
           Pop Smoke, was an American rapper, singer and songwriter. Born and raised in Canarsie, Brooklyn. Pop Smoke began his musical career in 2018 by releasing his breakout single "Welcome to the Party" in April 2019. Pop Smoke’s debut EP from July 2019, “Meet the Woo” (Victor Victor Worldwide/Republic), was one of the strongest New York rap releases in recent memory. His second EP, “Meet the Woo 2,” arrived in early February 2020, and debuted at No. 7 on the Billboard album chart.
@@ -20,11 +23,12 @@
         </p>  
         <h2>DISCOGRAPHY</h2>
         <div class="images">
-          <a href="https://music.apple.com/gb/album/meet-the-woo/1473525230"><img src="./img/meet-the-woo.jpg" alt=""></a>
-          <a href="https://music.apple.com/gb/album/meet-the-woo-2-deluxe/1498713274"><img src="./img/meet-the-woo-2.jpg" alt=""></a>
-          <a href="https://music.apple.com/gb/album/shoot-for-the-stars-aim-for-the-moon-deluxe/1524130266"><img src="./img/ShootForTheStarsAimForTheMoon.png" alt=""></a>
+          <a href="https://music.apple.com/gb/album/meet-the-woo/1473525230"><img src="./assets/img/meet-the-woo.jpg" alt=""></a>
+          <a href="https://music.apple.com/gb/album/meet-the-woo-2-deluxe/1498713274"><img src="./assets/img/meet-the-woo-2.jpg" alt=""></a>
+          <a href="https://music.apple.com/gb/album/shoot-for-the-stars-aim-for-the-moon-deluxe/1524130266"><img src="./assets/img/ShootForTheStarsAimForTheMoon.png" alt=""></a>
         </div>
       </div>
+      <!-- footer -->
       <h1 class="footer">RIP BASHAR "POP SMOKE" JACKSON 1999-2020</h1>         
      
 </body>
